<resources>
    <string name="app_name">YashMistryTask1</string>
    <string name="registerText">Register</string>
    <string name="emailAddress">Email Address</string>
    <string name="userName">User Name</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="registerButton">REGISTER</string>
</resources>